force-app/main/default/objects/Test_Score__c/fields/Percentile__c.field-meta.xml
<CustomField>
    <fullName>Percentile__c</fullName>
    <description>The percentile ranking for this score.</description>
    <inlineHelpText>The percentile ranking for this score.</inlineHelpText>
    <label>Percentile</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>