force-app/main/default/objects/Test_Score__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Test for which this score is being recorded.</description>
    <inlineHelpText>The Test for which this score is being recorded.</inlineHelpText>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Test Scores</relationshipLabel>
    <relationshipName>Test_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>