force-app/main/default/objects/Test_Score__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <description>Displays the Test Type name from the associated Test record. For example, SAT or GRE.</description>
    <formula>TEXT(Test__r.Test_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Test Type name from the associated Test record. For example, SAT or GRE.</inlineHelpText>
    <label>Test Type</label>
    <type>Text</type>
</CustomField>